# farx

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh
.claude/: launch.json
.claude/commands/: crew.md  enhance.md  farx.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  coverage.yml  release.yml
crates/crew-app/: Cargo.toml
crates/crew-app/src/: about.rs  altscroll.rs  app.rs  app_tests.rs  boxdraw.rs  chat.rs  chat_tests.rs  chatbody.rs  chatcode.rs  chatcomplete.rs  chatflow.rs  chathdr.rs  chatinput.rs  chatinput_tests.rs  chatkeys.rs  chatlayout.rs  chatlayout_tests.rs  chatmsgs.rs  chatmsgs_tests.rs  chatscroll.rs  chatspawn.rs  chatview.rs  chords.rs  chrome.rs  clickopen.rs  clipboard.rs  clock.rs  cmdmenu.rs  config.rs  cwd.rs  detach.rs  dispatch.rs  dump.rs  editpane.rs  envexpand.rs  events.rs  findhl.rs  fontcmd.rs  gauges.rs  git.rs  (+63 more)
crates/crew-app/src/farpane/: keys.rs  list.rs  mod.rs  mod_tests.rs  render.rs  render_tests.rs
crates/crew-app/src/grid/: compose.rs  mod.rs  state.rs  tests.rs
crates/crew-app/src/settingspane/: commit.rs  keys.rs  mod.rs  mod_tests.rs  render.rs  render_tests.rs
crates/crew-app/src/swarm/: bridge.rs  plan.rs  tests.rs  view.rs
crates/crew-hive/: Cargo.toml
crates/crew-hive/src/: lib.rs
crates/crew-hive/src/agent/: mod.rs  stub.rs  tests.rs
crates/crew-hive/src/batch/: mod.rs  tests.rs
crates/crew-hive/src/board/: mod.rs  tests.rs
crates/crew-hive/src/bus/: event.rs  mod.rs  tests.rs
crates/crew-hive/src/govern/: mod.rs  tests.rs
crates/crew-hive/src/graph/: spec.rs
crates/crew-hive/tests/: engine.rs
crates/crew-plugin/: Cargo.toml
crates/crew-plugin/src/: echo.rs  host.rs  lib.rs  orchestrator.rs  protocol.rs
crates/crew-plugin/src/broker/: adapter.rs  agents.rs  commands.rs  commands_tests.rs  discover.rs  discover_tests.rs  engine.rs  engine_budget_tests.rs  engine_tests.rs  fan.rs  fan_tests.rs  hop.rs  mod.rs  normalize.rs  normalize_tests.rs  plugins.rs  plugins_tests.rs  registry.rs  registry_tests.rs  relay.rs  relay_tests.rs  route.rs  route_tests.rs  run.rs  session.rs  stdio.rs  stdio_tests.rs  toolcall.rs  toolcall_tests.rs
crates/crew-plugin/src/mcp/: client.rs  client_tests.rs  config.rs  mod.rs
crates/crew-plugin/tests/: e2e_discovery.rs  e2e_relay.rs  host_test.rs
crates/crew-plugin/tests/common/: mod.rs
crates/crew-render/: Cargo.toml
crates/crew-render/examples/: screenshot.rs
crates/crew-render/src/: app.rs  cellgrid.rs  celltext.rs  celltext_tests.rs  color.rs  gpu.rs  lib.rs  paperbg.wgsl  quads.rs  quads.wgsl  renderer.rs  scene.rs  scene_tests.rs  text.rs  textprep.rs
crates/crew-term/: Cargo.toml
crates/crew-term/src/: color.rs  lib.rs  listener.rs  model.rs  modes.rs  osc7.rs  pty.rs
crates/crew-term/tests/: cwd.rs  scrollback.rs
crates/crew-theme/src/: lib.rs
crates/farx-ai/src/: agent.rs
crates/farx-app/: Cargo.toml
crates/farx-app/src/: main.rs  update.rs
crates/farx-core/: Cargo.toml
crates/farx-core/src/: action.rs  keymap.rs  lib.rs  tab_group.rs  tree.rs  types.rs
crates/farx-core/src/config/: ai.rs
crates/farx-core/src/panel_layout/: mod.rs  split.rs  tests.rs  traversal.rs  types.rs
crates/farx-core/src/types/: ai_tool.rs
crates/farx-core/src/update/: asset.rs  asset_tests.rs  install.rs  mod.rs  version.rs
crates/farx-core/tests/: panel_state_test.rs  tree_navigation_test.rs
crates/farx-fs/: Cargo.toml
crates/farx-fs/src/: archive.rs  duplicates.rs  lib.rs  local.rs  ops.rs
crates/farx-fs/src/archive/: compress.rs  detect.rs  mod.rs  tar_ops.rs  tests.rs  zip_ops.rs
crates/farx-fs/src/ops/: delete.rs  mkdir.rs
crates/farx-plugin/: Cargo.toml
crates/farx-plugin/src/: lib.rs  types.rs
crates/farx-ui/: Cargo.toml
crates/farx-ui/src/: app.rs  theme.rs
crates/farx-ui/src/app/: ai_glue.rs  globs.rs  helpers.rs  lifecycle.rs  mod.rs  pending.rs  shell_commands.rs  state.rs  terminals.rs  text_detect.rs
crates/farx-ui/src/app/dispatch/: analysis.rs  archives.rs  bulk_ops.rs  clipboard.rs  cmdline.rs  control.rs  file_dialogs.rs  mod.rs  nav.rs  term_palette.rs
crates/farx-ui/src/app/mouse/: hit_test.rs  mod.rs
crates/farx-ui/src/app/render/: mod.rs  overlays.rs  panels.rs
crates/farx-ui/src/app/slash/: agents.rs  agents_nav.rs  ai.rs  core.rs  files.rs  mod.rs  plugin.rs
crates/farx-ui/src/components/: ai_panel.rs  batch_rename.rs  bookmarks.rs  command_line.rs  editor.rs  feedback.rs  fn_bar.rs  fuzzy_finder.rs  help.rs  info_panel.rs  menu.rs  mod.rs  panel.rs  progress.rs  quick_actions.rs  slash_suggestions.rs  syntax.rs  tree_panel.rs  viewer.rs
crates/farx-ui/src/components/chmod_dialog/: keys.rs  mod.rs  render.rs  state.rs
crates/farx-ui/src/components/embedded_terminal/: input.rs  mod.rs  render.rs  scroll.rs  session.rs  thumbnail.rs
crates/farx-ui/src/components/help/: content.rs  mod.rs  render.rs  state.rs
crates/farx-ui/src/components/quick_actions/: catalog.rs  keys.rs  mod.rs  render.rs  types.rs
crates/farx-ui/src/components/slash_suggestions/: commands_a.rs  commands_b.rs
crates/farx-ui/tests/: agent_command_test.rs  features_test.rs
docs/: ARCHITECTURE.md  CREW.md  crew-ui-roadmap.md  docs.css  docs.html  index.html  style.css
docs/superpowers/plans/: 2026-06-19-agent-grid-layout.md  2026-06-19-agent-grid-wiring.md  2026-06-20-crew-cell-render.md  2026-06-20-crew-foundation.md  2026-06-21-crew-chat-plugins.md  2026-06-21-crew-home.md  2026-06-21-crew-multipane.md  2026-06-21-crew-orchestrator.md  2026-06-27-crew-hive-blackboard.md  2026-06-27-crew-hive-foundations.md  2026-06-27-crew-hive-governance.md  2026-06-27-crew-hive-remote.md  2026-06-27-crew-hive-scheduler.md  2026-06-27-crew-hive-swarmview.md  2026-06-27-crew-lru-grid-strip.md  2026-06-28-crew-hive-pane.md  2026-06-28-crew-swarm-pane.md  2026-07-01-settings-pane-bento-form.md
docs/superpowers/specs/: 2026-05-16-update-command-design.md  2026-06-20-crew-terminal-design.md  2026-06-21-crew-chat-plugins-design.md
scripts/: enhance-agent.sh
(+24 files in other folders)
