[workspace]
resolver = "2"
members = [
    "crates/crew-theme",
    "crates/crew-hive",
    "crates/crew-term",
    "crates/crew-render",
    "crates/crew-app",
    "crates/crew-plugin",
]

[workspace.package]
version = "0.5.19"
edition = "2021"
authors = ["crew contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP / AI
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Filesystem
walkdir = "2"
dirs = "5"
trash = "5"

# File watching
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }

# Hashing
sha2 = "0.10"

# Archives
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Clipboard
arboard = "3"

# Regex
regex = "1"

# Scripting
mlua = { version = "0.10", features = ["lua54", "vendored"] }

# Terminal multiplexer
portable-pty = "0.8"
vt100 = "0.15"

# Crew dependencies
winit = "=0.30.13"
wgpu = "=29.0.3"
glyphon = "=0.11.0"
alacritty_terminal = "=0.26.0"

# System stats
sysinfo = "0.33"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
open = "5"
semver = "1"

# Auto-update
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "rustls"] }

