[package]
name = "crew-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crew"
path = "src/main.rs"

[dependencies]
crew-plugin = { path = "../crew-plugin" }
crew-term = { path = "../crew-term" }
crew-render = { path = "../crew-render" }
winit.workspace = true
anyhow.workspace = true
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
