[package]
name = "crew-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crew"
path = "src/main.rs"

[dependencies]
crew-plugin = { path = "../crew-plugin" }
crew-term = { path = "../crew-term" }
crew-render = { path = "../crew-render" }
winit.workspace = true
anyhow.workspace = true
ratatui.workspace = true
arboard = "3"
chrono = "0.4"
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
sysinfo = { workspace = true }
open = { workspace = true }
crew-hive = { path = "../crew-hive" }
tokio = { workspace = true }
self_update = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
