[package]
name = "crew-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# Integration tests (tests/) parse the broker's JSON event lines.
[dev-dependencies]
serde_json.workspace = true
