[package]
name = "farx-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "farx"
path = "src/main.rs"

[dependencies]
farx-core = { workspace = true }
farx-fs = { workspace = true }
farx-ui = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
self_update = { workspace = true }
semver = { workspace = true }
