[package]
name = "farx-core"
version.workspace = true
edition.workspace = true

[dependencies]
crossterm = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }

# Auto-update
self_update = { workspace = true }
self-replace = "1"
semver = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
tempfile = "3"
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = "3"
