[package]
name = "farx-fs"
version.workspace = true
edition.workspace = true

[dependencies]
farx-core = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
trash = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
