[package]
name = "farx-ui"
version.workspace = true
edition.workspace = true

[dependencies]
farx-core = { workspace = true }
farx-fs = { workspace = true }
farx-ai = { workspace = true }
farx-plugin = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
unicode-width = { workspace = true }
chrono = { workspace = true }
open = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arboard = { workspace = true }
regex = { workspace = true }
libc = "0.2"
